# hse_image_processor_2024

./: .gitignore  CMakeLists.txt  README.md
include/data/: image.h  pixel.h
include/filters/: filter.h  grayscale.h
include/io/: binary_reader.h  binary_writer.h  bmp.h  image_format.h
src/: image_processor.cpp
src/data/: image.cpp  pixel.cpp
src/filters/: grayscale.cpp
src/io/: binary_reader.cpp  binary_writer.cpp  bmp.cpp
